test: fix failing and/or flaky tests